Added client part. Added letter apear animation

--- a/server/routes/index.html
+++ b/server/routes/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="stylesheet.css" rel="stylesheet" />
     <script>
         async function submit()
         {
@@ -49,6 +50,24 @@
     <input id="word" />
     <button onclick="submit()">submit</button>
     <div id="words">
+    </div>
+
+    <div class="flex rowContainer">
+        <div class="letterContainer specifiedLetter">
+            A
+        </div>
+        <div class="letterContainer specifiedLetter" style="animation-delay: 0.2s">
+            B
+        </div>
+        <div class="letterContainer specifiedLetter" style="animation-delay: 0.4s">
+            C
+        </div>
+        <div class="letterContainer specifiedLetter" style="animation-delay: 0.6s ">
+            D
+        </div>
+        <div class="letterContainer specifiedLetter" style="animation-delay: 0.8s ">
+            E
+        </div>
     </div>
 </body>
 </html>
