Fixed letter apear animation

--- a/server/routes/index.html
+++ b/server/routes/index.html
@@ -53,19 +53,19 @@
     </div>
 
     <div class="flex rowContainer">
-        <div class="letterContainer specifiedLetter">
+        <div class="letterContainer specifiedLetter specifiedCorrect">
             A
         </div>
-        <div class="letterContainer specifiedLetter" style="animation-delay: 0.2s">
+        <div class="letterContainer specifiedLetter specifiedAbsent" style="animation-delay: 0.2s">
             B
         </div>
-        <div class="letterContainer specifiedLetter" style="animation-delay: 0.4s">
+        <div class="letterContainer specifiedLetter specifiedPresent" style="animation-delay: 0.4s">
             C
         </div>
-        <div class="letterContainer specifiedLetter" style="animation-delay: 0.6s ">
+        <div class="letterContainer specifiedLetter specifiedPresent" style="animation-delay: 0.6s ">
             D
         </div>
-        <div class="letterContainer specifiedLetter" style="animation-delay: 0.8s ">
+        <div class="letterContainer specifiedLetter specifiedAbsent" style="animation-delay: 0.8s ">
             E
         </div>
     </div>
