--- a/server/routes/index.html
+++ b/server/routes/index.html
@@ -5,69 +5,11 @@
     <meta charset="utf-8" />
     <title></title>
     <link href="stylesheet.css" rel="stylesheet" />
-    <script>
-        async function submit()
-        {
-            const input = document.getElementById("word").value;
-            const responseText = await (await fetch("/guess?word=" + input, { method: "POST" })).text();
-
-            try
-            {
-                response = JSON.parse(responseText);
-                let innerHTML = "";
-                for (let index = 0; index < response.length; index++)
-                {
-                    let color = "";
-
-                    switch (response[index].type)
-                    {
-                        case "absent":
-                            color = "black";
-                            break;
-                        case "present":
-                            color = "yellow";
-                            break;
-                        case "correct":
-                            color = "green";
-                            break;
-                        default:
-                            color = "";
-                            break;
-                    }
-
-                    innerHTML += `<span style="color:${color}">${String.fromCharCode(response[index]._charCode)}</span>`;
-                }
-
-                document.getElementById("words").innerHTML += innerHTML + "<br/>";
-            }
-            catch {
-                console.log(responseText);
-            }
-        }
-    </script>
+    <script src="app.js">
+    </script>  
 </head>
 <body>
-    <input id="word" />
-    <button onclick="submit()">submit</button>
     <div id="words">
-    </div>
-
-    <div class="flex rowContainer">
-        <div class="letterContainer specifiedLetter specifiedCorrect">
-            A
-        </div>
-        <div class="letterContainer specifiedLetter specifiedAbsent" style="animation-delay: 0.2s">
-            B
-        </div>
-        <div class="letterContainer specifiedLetter specifiedPresent" style="animation-delay: 0.4s">
-            C
-        </div>
-        <div class="letterContainer specifiedLetter specifiedPresent" style="animation-delay: 0.6s ">
-            D
-        </div>
-        <div class="letterContainer specifiedLetter specifiedAbsent" style="animation-delay: 0.8s ">
-            E
-        </div>
     </div>
 </body>
 </html>
