Msde flexible interface. Fixed minor bugs

--- a/server/routes/public/index.html
+++ b/server/routes/public/index.html
@@ -3,13 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <title></title>
     <link href="stylesheet.css" rel="stylesheet" />
     <script src="app.js">
-    </script>  
+    </script>
 </head>
 <body>
-    <div id="words">
-    </div>
+    <div class="wrapper" id="wrapper">
+        <div class="header">
+            <p class="headerTitle">VVordle</p>
+        </div>
+    </div>    
 </body>
 </html>
