--- a/server/routes/public/index.html
+++ b/server/routes/public/index.html
@@ -14,6 +14,8 @@
         <div class="header">
             <p class="headerTitle">VVordle</p>
         </div>
-    </div>    
+        <div class="alerts" id="alerts">
+        </div>
+    </div>
 </body>
 </html>
