Added wordle types (random, daily). Fixed design

--- a/server/routes/public/index.html
+++ b/server/routes/public/index.html
@@ -13,11 +13,10 @@
     <div class="wrapper" id="wrapper">
         <div class="header">
             <div class="leftMenu">
-                <a href="https://github.com/geekrope/wordle">
-                    <img src="github-icon.svg" class="buttonIcon" />
+                <a href="https://github.com/geekrope/wordle" class="buttonIcon" style="background-image: url(github-icon.svg); background-size: contain">
                 </a>
             </div>
-            <p class="headerTitle">VVordle</p>
+            <img src="header.svg" class="headerTitle" />
             <div class="rightMenu">
                 <img src="share.svg" class="buttonIcon" onclick="navigator.share({url: window.location.href })" />
             </div>
