Added evaluations into statistics box

--- a/server/routes/public/index.html
+++ b/server/routes/public/index.html
@@ -18,6 +18,7 @@
             </div>
             <img src="header.svg" class="headerTitle" />
             <div class="rightMenu">
+                <img src="statistics.svg" id="statisticsOpen" class="buttonIcon" />
                 <img src="share.svg" class="buttonIcon" onclick="navigator.share({url: window.location.href })" />
             </div>
         </div>
