--- a/server/routes/public/index.html
+++ b/server/routes/public/index.html
@@ -13,13 +13,13 @@
     <div class="wrapper" id="wrapper">
         <div class="header">
             <div class="leftMenu">
-                <a href="https://github.com/geekrope/wordle" class="buttonIcon" style="background-image: url(github-icon.svg); background-size: contain">
+                <a href="https://github.com/geekrope/wordle" class="buttonIcon" style="background-image: url(github-icon.svg); background-size: contain; height:20px; width:20px">
                 </a>
             </div>
             <img src="header.svg" class="headerTitle" />
             <div class="rightMenu">
-                <img src="statistics.svg" id="statisticsOpen" class="buttonIcon" />
-                <img src="share.svg" class="buttonIcon" onclick="navigator.share({url: window.location.href })" />
+                <img src="statistics.svg" id="statisticsOpen" class="buttonIcon" style="height:20px" />
+                <img src="share.svg" class="buttonIcon" onclick="navigator.share({url: window.location.href })" style="height:24px" />
             </div>
         </div>
         <div class="alerts" id="alerts">
